# excel2csv

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: constants.py  converter.py  main.py
