[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "excel2csv"
version = "0.1.0"
dependencies = [
    "openpyxl>=3.1.5",
    "pytest>=7.4.4",
]
requires-python = ">= 3.8"
description = "Excel to csv converter"
readme = "README.md"
keywords = ["excel", "csv", "converter"]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: End Users/Desktop",
    "Topic :: File Formats",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
Repository = "https://github.com/Ricwol/excel2csv.git"
Issues = "https://github.com/Ricwol/excel2csv/issues"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]